ทำการเพิ่ม เส้น สำหรับสร้าง รายรับรายจ่าย แต่ต้องแก้ไข เส้น ดึงข้อมูลทั้งหมด ใหม่
